# django-prefetch-values

./: .pre-commit-config.yaml  README.md  benchmark.db  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml  tag.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/getting-started/installation/: index.html
0.2.0/getting-started/quickstart/: index.html
0.2.0/guide/django-ninja/: index.html
0.2.0/reference/api/: index.html
0.2.0/reference/changelog/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/getting-started/installation/: index.html
0.2.1/getting-started/quickstart/: index.html
0.2.1/reference/api/: index.html
0.2.1/reference/changelog/: index.html
0.2.1/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/getting-started/installation/: index.html
0.3.0/getting-started/quickstart/: index.html
0.3.0/reference/api/: index.html
0.3.0/reference/changelog/: index.html
0.3.0/search/: search_index.json
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/getting-started/installation/: index.html
0.5.0/getting-started/quickstart/: index.html
0.5.0/reference/api/: index.html
0.5.0/reference/changelog/: index.html
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/getting-started/installation/: index.html
0.5.2/getting-started/quickstart/: index.html
0.5.2/reference/api/: index.html
0.5.2/reference/changelog/: index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/getting-started/installation/: index.html
0.6.0/getting-started/quickstart/: index.html
0.6.0/reference/api/: index.html
0.6.0/reference/changelog/: index.html
0.6.0/search/: search_index.json
0.6.1/: 404.html  index.html  sitemap.xml
0.6.1/getting-started/installation/: index.html
0.6.1/getting-started/quickstart/: index.html
0.6.1/reference/api/: index.html
0.6.1/reference/changelog/: index.html
0.6.10/: 404.html  index.html  sitemap.xml
0.6.10/getting-started/installation/: index.html
0.6.10/getting-started/quickstart/: index.html
0.6.10/reference/api/: index.html
0.6.10/reference/changelog/: index.html
0.6.13/: 404.html  index.html  sitemap.xml
0.6.13/getting-started/installation/: index.html
0.6.13/getting-started/quickstart/: index.html
0.6.13/reference/api/: index.html
0.6.13/reference/changelog/: index.html
0.6.14/: 404.html  index.html  sitemap.xml
0.6.14/getting-started/installation/: index.html
0.6.14/getting-started/quickstart/: index.html
0.6.14/reference/api/: index.html
0.6.14/reference/changelog/: index.html
0.6.14/search/: search_index.json
0.6.2/: 404.html  index.html  sitemap.xml
0.6.2/getting-started/installation/: index.html
0.6.2/getting-started/quickstart/: index.html
0.6.2/reference/api/: index.html
0.6.2/reference/changelog/: index.html
0.6.3/: 404.html  index.html  sitemap.xml
0.6.3/getting-started/installation/: index.html
0.6.3/getting-started/quickstart/: index.html
0.6.3/reference/api/: index.html
0.6.3/reference/changelog/: index.html
0.6.4/: 404.html  index.html  sitemap.xml
0.6.4/getting-started/installation/: index.html
0.6.4/getting-started/quickstart/: index.html
0.6.4/reference/api/: index.html
0.6.4/reference/changelog/: index.html
0.6.6/: 404.html  index.html  sitemap.xml
0.6.6/getting-started/installation/: index.html
0.6.6/getting-started/quickstart/: index.html
0.6.6/reference/api/: index.html
0.6.6/reference/changelog/: index.html
0.6.9/: 404.html  index.html  sitemap.xml
0.6.9/getting-started/installation/: index.html
0.6.9/getting-started/quickstart/: index.html
0.6.9/reference/api/: index.html
0.6.9/reference/changelog/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/getting-started/installation/: index.html
1.0.0/getting-started/quickstart/: index.html
1.0.0/reference/api/: index.html
1.0.0/reference/changelog/: index.html
1.0.0/search/: search_index.json
benchmarks/: benchmark.py
dev/: 404.html  index.html  sitemap.xml
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/guide/django-ninja/: index.html
dev/reference/api/: index.html
dev/reference/changelog/: index.html
dev/search/: search_index.json
django_nested_values/: __init__.py  queryset.py
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: api.md  changelog.md
tests/: models.py  settings.py  test_attr_access.py  test_generic_relation.py  test_null_fk_handling.py  test_object_access.py  test_prefetch_values.py  test_query_count.py  test_slicing.py
tests/testapp/: models.py
